--- a/index.html
+++ b/index.html
@@ -21,12 +21,34 @@
               graphite: '#4A4A4A', // Secondary text
               line: '#D1D1D1',  // Border lines
               accent: '#2563EB', // Blue accent (kept but muted)
+            },
+            keyframes: {
+              'gentle-float': {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-3px)' },
+              },
+              'subtle-drift': {
+                '0%, 100%': { transform: 'translate(0, 0)' },
+                '50%': { transform: 'translate(2px, 2px)' },
+              },
+              'subtle-pulse': {
+                '0%, 100%': { transform: 'scale(1)' },
+                '50%': { transform: 'scale(1.15)' },
+              }
+            },
+            animation: {
+              'gentle-float': 'gentle-float 3s ease-in-out infinite',
+              'subtle-drift': 'subtle-drift 3s ease-in-out infinite',
+              'subtle-pulse': 'subtle-pulse 2s ease-in-out infinite',
             }
           }
         }
       }
     </script>
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       body {
         background-color: #F4F4F0;
         color: #111111;
